Add generic graph A* search, and RegionGraphPather to find paths between chokepoints Constains also some dumb formatting changes by ClangFormat but whatevs

--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="include\distancemap.h" />
     <ClInclude Include="include\exception.h" />
     <ClInclude Include="include\external\clipper.hpp" />
+    <ClInclude Include="include\graphsearch.h" />
     <ClInclude Include="include\hive_array2.h" />
     <ClInclude Include="include\hive_config.h" />
     <ClInclude Include="include\hive_geometry.h" />
